2007-04-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/ivs_connection.cpp:
	enqueue cursor-encodings in an earlier stage

	* build_mingw32:
	* ica/Makefile.am:
	* ica/win32/win32vnc.cpp:
	* ica/win32/src/vncDesktop.cpp:
	* ica/win32/src/VNCHooks/VNCHooks.cpp:
	put vnc-hook-stuff into separate DLL-file to make hooks work as
	expected - closes #1698534 and probably fixes some other problems

	* ica/src/vncview.cpp:
	set widget-cursor for vncView to according remote-cursor instead of
	drawing it - speeds thing a bit up

	* ica/src/vncview.h:
	* ica/src/remote_control_widget.cpp:
	correct titlebar caption - closes #1700553

	* ica/win32/src/vncServer.cpp:
	tweaked default-settings a bit

	* ica/win32/src/VideoDriver.h:
	fixed non-ANSI-conform code

	* ica/win32/src/VNCHooks/SharedData.cpp:
	added SHARED-attribute to make all variables reside in a different
	shared segment

2007-04-20	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/src/local_system.cpp:
	also print log-messages to stdout

	* ica/src/system_key_trapper.h:
	* ica/src/system_key_trapper.cpp:
	added support for trapping Alt+Space - closes #1704091

	* common/src/local_system.cpp:
	* common/include/local_system.h:
	* ica/src/ica_main.cpp:
	renamed "localSystem::parameterSetting" to "localSystem::parameter"

	* ica/src/ica_main.cpp:
	added "-v" and "--version"-parameter

2007-04-13	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/dialogs/config.ui:
	* ima/src/config_widget.cpp:
	* ima/src/classroom_manager.h:
	* ima/src/classroom_manager.cpp:
	* ima/src/client.cpp:
	added setting for client-double-click-action

2007-04-12	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* common/include/local_system.h:
	* common/src/local_system.cpp:
	* ica/src/ica_main.cpp:
	added possibility to set parameters such as -ivsport and -isdport
	using settings in either /etc/qt4/iTALC Solutions/iTALC.conf (Linux)
	or registry (win32)
