@@ -1,5 +1,14 @@
 2007-04-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
+	* ica/ica.qrc:
+	* ica/resources/mouse.png:
+	* ica/resources/up.png:
+	* ica/src/remote_control_widget.cpp:
+	* ica/src/remote_control_widget.h:
+	* ica/src/vncview.cpp:
+	* ica/src/vncview.h:
+	complete redesign of toolbar and buttons
+
 	* common/src/ivs_connection.cpp:
 	enqueue cursor-encodings in an earlier stage
 
